--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,8 +51,14 @@
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li><a class="nav-link scrollto" href="about.html">About</a></li>
-
+          <li class="nav-link scrollto dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="download.html">Download Data</a></li>
+              <li><a href="sources.html">Bibliographic Sources</a></li>
+              <!-- <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li> -->
+            </ul>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
