adding sorting to build

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -174,7 +174,7 @@ let search_fields = ['deep-id','title','title-page-modern','errata','paratextual
   'charachter-list','commendatory-verses','explicit','dedication','other-paratexts','book_edition',
   'play_edition','actor-list','authororial-status','greg_number','stc_or_wing']
 
-let date_fields = ['first-production','first-edition','year-published','dateofcomp','dateoffirsted']
+let date_fields = ['first-production','first-edition','year-published']
 
 let choice_fields = ['author','authorial-status','company-first-performance','company','theater','playtype','genre','genreplaybook','blackletter','format']
 
@@ -568,7 +568,6 @@ function addANDBlock() {
         <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
-        <option value="dateofcomp" >Date of First Production</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
         <option value="dedication">Dedication</option>
@@ -591,7 +590,6 @@ function addANDBlock() {
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
         <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
-        <option value="dateoffirsted" >Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
@@ -700,7 +698,6 @@ function addORBlock() {
         <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
-        <option value="dateofcomp" >Date of First Production</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
         <option value="dedication">Dedication</option>
@@ -723,7 +720,6 @@ function addORBlock() {
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
         <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
-        <option value="dateoffirsted" >Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
@@ -762,7 +758,6 @@ function addORBlock() {
         <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
-        <option value="dateofcomp" >Date of First Production</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
         <option value="dedication">Dedication</option>
@@ -785,7 +780,6 @@ function addORBlock() {
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
         <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
-        <option value="dateoffirsted" >Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
@@ -930,7 +924,6 @@ function addFilterBlock_old(type) {
                 <option value="title-page-old">All Title-Page Text (old spelling)</option>
                 <option value="company-first-performance">Company (First Production)</option>
                 <option value="company">Company (Title-Page Attribution)</option>
-                <option value="dateofcomp" >Date of First Production</option>
                 <option value="theater">Theater (Title-Page Attribution)</option>
                 <option value="playtype">Play Type</option>
                 <option value="dedication">Dedication</option>
@@ -953,7 +946,6 @@ function addFilterBlock_old(type) {
                 <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
                 <option value="commendatory-verses" >Commendatory Verses</option>
                 <option value="imprintlocation">Imprint Location</option>
-                <option value="dateoffirsted" >Date of First Edition</option>
                 <option value="format">Format</option>
                 <option value="book_edition">Book edition number</option>
                 <option value="play_edition">Play edition number</option>
