add sort for formats.json

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -349,6 +349,32 @@ const update_searchSelect = (searchSelect, or=false) => {
       }
       });
     }
+    if (filter === 'genreplaybook') { 
+      // hide advancedSearchField
+      this_choices = new Choices(choicesSelect,{
+        addItems: false,
+        shouldSort: false,
+        shouldSortItems: false,
+        allowHTML: true,
+        position: 'bottom',
+        placeholder: 'Select an option',
+      })
+      searchField.style.display = "none";
+      this_years.classList.add("d-none");
+      choicesSelect.style.display = "block";
+      this_choices.init()
+      this_choices.clearChoices()
+      // change element to choices field
+      this_choices.setChoices(async () => {
+        try {
+          const items = await fetch('/assets/data/genre_playbook.json');
+          return items.json();
+          
+      } catch (err) {
+        console.error(err);
+      }
+      });
+    }
     if (filter === 'playtype') {
       this_choices = new Choices(choicesSelect,{
         addItems: false,
