changed formatting of colums

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -587,25 +587,17 @@ function addANDBlock() {
         <option value="">Please select...</option>
         <option value="deep-id">DEEP ID</option>
         <option value="title" selected>Title</option>
-        <option value="author">Author</option>
+        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
+        <option value="title-page-old">All Title-Page Text (old spelling)</option>  
+        <option value="author">Author (Modern Attribution)</option>
         <option value="title-page-author">Author (Title-Page Attribution)</option>
         <option value="authorial-status">Authorial Status (Title-Page Attribution)</option>
-        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
-        <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
-        <option value="dedication">Dedication</option>
         <option value="genre">Genre (Annals)</option>
-        <option value="toreader">To the Reader</option>
         <option value="genreplaybook" >Genre (Title-Page Attribution)</option>
-        <option value="argument">Argument</option>
-        <option value="actor-list">Actor List</option>
-        <option value="explicit">Explicit</option>
-        <option value="errata">Errata</option>
-        <option value="charachter-list">Character List</option>
-        <option value="other-paratexts">Other Paratexts</option>
         <option value="paratextual" >All Paratextual Material</option>
         <option value="illustration">Illustration</option>
         <option value="blackletter">Black Letter</option>
@@ -614,16 +606,24 @@ function addANDBlock() {
         <option value="printer" >&nbsp;&nbsp;&nbsp;&nbsp;Printer</option>
         <option value="publisher" >&nbsp;&nbsp;&nbsp;&nbsp;Publisher</option>
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
-        <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
+        <option value="first-production">Date of First Production</option>
+        <option value="first-edition">Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
         <option value="greg_number">Greg Number</option>
         <option value="stc_or_wing">STC / Wing Number</option>
-        <option value="first-production">Date of First Production</option>
-        <option value="first-edition">Date of First Edition</option>
         <option value="year-published">Year Published</option>
+        <option value="dedication">Dedication</option>
+        <option value="toreader">To the Reader</option>
+        <option value="argument">Argument</option>
+        <option value="actor-list">Actor List</option>
+        <option value="explicit">Explicit</option>
+        <option value="errata">Errata</option>
+        <option value="charachter-list">Character List</option>
+        <option value="other-paratexts">Other Paratexts</option>
+        <option value="commendatory-verses" >Commendatory Verses</option>
 
       </select>
       <input id="advancedSearchField" type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
@@ -717,25 +717,17 @@ function addORBlock() {
         <option value="">Please select...</option>
         <option value="deep-id">DEEP ID</option>
         <option value="title" selected>Title</option>
-        <option value="author">Author</option>
+        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
+        <option value="title-page-old">All Title-Page Text (old spelling)</option>  
+        <option value="author">Author (Modern Attribution)</option>
         <option value="title-page-author">Author (Title-Page Attribution)</option>
         <option value="authorial-status">Authorial Status (Title-Page Attribution)</option>
-        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
-        <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
-        <option value="dedication">Dedication</option>
         <option value="genre">Genre (Annals)</option>
-        <option value="toreader">To the Reader</option>
         <option value="genreplaybook" >Genre (Title-Page Attribution)</option>
-        <option value="argument">Argument</option>
-        <option value="actor-list">Actor List</option>
-        <option value="explicit">Explicit</option>
-        <option value="errata">Errata</option>
-        <option value="charachter-list">Character List</option>
-        <option value="other-paratexts">Other Paratexts</option>
         <option value="paratextual" >All Paratextual Material</option>
         <option value="illustration">Illustration</option>
         <option value="blackletter">Black Letter</option>
@@ -744,16 +736,24 @@ function addORBlock() {
         <option value="printer" >&nbsp;&nbsp;&nbsp;&nbsp;Printer</option>
         <option value="publisher" >&nbsp;&nbsp;&nbsp;&nbsp;Publisher</option>
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
-        <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
+        <option value="first-production">Date of First Production</option>
+        <option value="first-edition">Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
         <option value="greg_number">Greg Number</option>
         <option value="stc_or_wing">STC / Wing Number</option>
-        <option value="first-production">Date of First Production</option>
-        <option value="first-edition">Date of First Edition</option>
         <option value="year-published">Year Published</option>
+        <option value="dedication">Dedication</option>
+        <option value="toreader">To the Reader</option>
+        <option value="argument">Argument</option>
+        <option value="actor-list">Actor List</option>
+        <option value="explicit">Explicit</option>
+        <option value="errata">Errata</option>
+        <option value="charachter-list">Character List</option>
+        <option value="other-paratexts">Other Paratexts</option>
+        <option value="commendatory-verses" >Commendatory Verses</option>
 
       </select>
       <input id="advancedSearchField" type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
@@ -777,25 +777,17 @@ function addORBlock() {
         <option value="">Please select...</option>
         <option value="deep-id">DEEP ID</option>
         <option value="title" selected>Title</option>
-        <option value="author">Author</option>
+        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
+        <option value="title-page-old">All Title-Page Text (old spelling)</option>  
+        <option value="author">Author (Modern Attribution)</option>
         <option value="title-page-author">Author (Title-Page Attribution)</option>
         <option value="authorial-status">Authorial Status (Title-Page Attribution)</option>
-        <option value="title-page-modern">All Title-Page Text (modern spelling)</option>
-        <option value="title-page-old">All Title-Page Text (old spelling)</option>
         <option value="company-first-performance">Company (First Production)</option>
         <option value="company">Company (Title-Page Attribution)</option>
         <option value="theater">Theater (Title-Page Attribution)</option>
         <option value="playtype">Play Type</option>
-        <option value="dedication">Dedication</option>
         <option value="genre">Genre (Annals)</option>
-        <option value="toreader">To the Reader</option>
         <option value="genreplaybook" >Genre (Title-Page Attribution)</option>
-        <option value="argument">Argument</option>
-        <option value="actor-list">Actor List</option>
-        <option value="explicit">Explicit</option>
-        <option value="errata">Errata</option>
-        <option value="charachter-list">Character List</option>
-        <option value="other-paratexts">Other Paratexts</option>
         <option value="paratextual" >All Paratextual Material</option>
         <option value="illustration">Illustration</option>
         <option value="blackletter">Black Letter</option>
@@ -804,16 +796,24 @@ function addORBlock() {
         <option value="printer" >&nbsp;&nbsp;&nbsp;&nbsp;Printer</option>
         <option value="publisher" >&nbsp;&nbsp;&nbsp;&nbsp;Publisher</option>
         <option value="bookseller" >&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
-        <option value="commendatory-verses" >Commendatory Verses</option>
         <option value="imprintlocation">Imprint Location</option>
+        <option value="first-production">Date of First Production</option>
+        <option value="first-edition">Date of First Edition</option>
         <option value="format">Format</option>
         <option value="book_edition">Book edition number</option>
         <option value="play_edition">Play edition number</option>
         <option value="greg_number">Greg Number</option>
         <option value="stc_or_wing">STC / Wing Number</option>
-        <option value="first-production">Date of First Production</option>
-        <option value="first-edition">Date of First Edition</option>
         <option value="year-published">Year Published</option>
+        <option value="dedication">Dedication</option>
+        <option value="toreader">To the Reader</option>
+        <option value="argument">Argument</option>
+        <option value="actor-list">Actor List</option>
+        <option value="explicit">Explicit</option>
+        <option value="errata">Errata</option>
+        <option value="charachter-list">Character List</option>
+        <option value="other-paratexts">Other Paratexts</option>
+        <option value="commendatory-verses" >Commendatory Verses</option>
 
       </select>
       <input id="advancedSearchField" type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
@@ -1786,16 +1786,9 @@ function expand(e, id) {
                 ${!data.play_edition ? '' : '<span class="expand">Play Edition: </span><span id="play_edition"> ' + data.play_edition + '</span><br>'}
                 ${!data.format ? '' : '<span class="expand">Format: </span><span id="format"> ' + data.format + '</span><br>'}
                 ${!data.leaves ? '' : '<span class="expand">Leaves: </span><span id="leaves"> ' + data.leaves + '</span><br>'}
-                ${typeof data.total_editions === 'undefined' ? '' : '<br><span class="expand">Total Editions:</span><span id="total_editions"> ' + data.total_editions + '</span><br>'}
-                ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants"> ' + data.variants + ' ' + data.variant_link + '<br>'}
-                ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span><span id="in_collection"> ' + data.in_collection + '</span><br>'}
-                ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span><span id="collection_contains"> ' + data.collection_contains + '</span><br>'}
-                ${!data.independent_playbook ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a target="_blank" href="' + data.independent_playbook_link_id + '.html">' + data.independent_playbook + '</a></span><br>'}
-                ${!data.also_in_collection ? '' : '<br><span class="expand">Also appears in collection: </span><span id="also_in_collection">' + data.also_in_collection_link + '</span><br>'}
               </p>
-            </div>
+            </div>    
             
-    
             <div class="col-7">
               <p>
                 ${!data.record_type ? '' : '<span class="expand">Record Type: </span><span id="record_type">' + data.record_type + '</span><br>'}
@@ -1809,6 +1802,17 @@ function expand(e, id) {
                 ${!data.company_attribution ? '' : '<span class="expand">Company Attribution: </span><span id="company_attribution">' + data.company_attribution + '</span><br>'}
               </p>
             </div>
+
+            <div class="col-12">
+              <p>
+                ${typeof data.total_editions === 'undefined' ? '' : '<br><span class="expand">Total Editions:</span><span id="total_editions"> ' + data.total_editions + '</span><br>'}
+                ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants"> ' + data.variants + ' ' + data.variant_link + '<br>'}
+                ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span><span id="in_collection"> ' + data.in_collection + '</span><br>'}
+                ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span><span id="collection_contains"> ' + data.collection_contains + '</span><br>'}
+                ${!data.independent_playbook ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a target="_blank" href="' + data.independent_playbook_link_id + '.html">' + data.independent_playbook + '</a></span><br>'}
+                ${!data.also_in_collection ? '' : '<br><span class="expand">Also appears in collection: </span><span id="also_in_collection">' + data.also_in_collection_link + '</span><br>'}
+              </p>
+            </div>    
 
           </div>  
          </div>
